--- a/.buildkite/pipeline.yaml
+++ b/.buildkite/pipeline.yaml
@@ -1,28 +1,4 @@
 steps:
   - label: ":building_construction: Build"
     key: "build"
-    commands:
-      - .buildkite/scripts/build.sh
-    plugins:
-      - docker#v3.5.0:
-          propagate-environment: true
-          mount-ssh-agent: true
-          image: "node:latest" 
-          workdir: /app
-    artifact_paths:
-      - ./dist/**/*
-
-  - label: ":terraform: Deploy"
-    key: "deploy"
-    depends_on: "build"
-    commands:
-      - .buildkite/scripts/deploy.sh
-    plugins:
-      - docker#v3.5.0:
-          propagate-environment: true
-          mount-ssh-agent: true
-          entrypoint: ""
-          shell: ["/bin/sh", "-c"]
-          image: "hashicorp/terraform:latest"
-      - cultureamp/aws-assume-role#v0.1.0:
-          role: "arn:aws:iam::695663959248:role/S3Admin"
+    commands: echo "Hello world"
