--- a/.buildkite/pipeline.yaml
+++ b/.buildkite/pipeline.yaml
@@ -1,4 +1,13 @@
 steps:
   - label: ":building_construction: Build"
     key: "build"
-    commands: echo "Hello world"
+    commands:
+      - .buildkite/scripts/build.sh
+    plugins:
+      - docker#v3.5.0:
+          propagate-environment: true
+          mount-ssh-agent: true
+          image: "node:latest" 
+          workdir: /app
+    artifact_paths:
+      - ./dist/**/*
