--- a/.buildkite/pipeline.yaml
+++ b/.buildkite/pipeline.yaml
@@ -11,4 +11,22 @@ steps:
           image: "node:latest" 
           workdir: /app
     artifact_paths:
-      - ./dist/**/*    
+      - ./dist/**/*
+
+
+  - label: ":terraform: Deploy"
+    key: "deploy"
+    depends_on: "build"
+    commands:
+      - chmod +x .buildkite/scripts/deploy.sh
+      - .buildkite/scripts/deploy.sh
+    plugins:
+      - cultureamp/aws-assume-role#v0.1.0:
+          role: "arn:aws:iam::695663959248:role/S3Admin"
+      - docker#v3.5.0:
+          mount-ssh-agent: true
+          propagate-environment: true
+          propagate-aws-auth-token: true
+          entrypoint: ""
+          shell: ["/bin/sh", "-c"]
+          image: "hashicorp/terraform:latest"      
