--- a/.buildkite/pipeline.yaml
+++ b/.buildkite/pipeline.yaml
@@ -28,6 +28,8 @@ steps:
     key: "deploy"
     depends_on: "build"
     commands:
+      - echo "Env variables"
+      - env
       - chmod +x .buildkite/scripts/deploy.sh
       - .buildkite/scripts/deploy.sh
     plugins:
